changes to php to js

--- a/index.html
+++ b/index.html
@@ -1,24 +1,3 @@
-<?php
-	$answers = array(
-		'sim',
-		'não',
-		'tente novamente mais tarde',
-		'nada',
-		'vá em frente',
-		'nunca',
-		'jamais',
-		'com certeza',
-		'talvez',
-		'não quero',
-		
-	);
-	if ($_POST) {
-		$answer = $answers[array_rand($answers)];
-		$question = $_POST['question'];
-	}
-
-?>
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -40,10 +19,10 @@
 			<form action="#" class="Form" method="POST">
 				<div class="form-item">
 					<div class="_append">
-						<input type="" name="question" value="<?= isset($question) ? $question : '' ?>" placeholder="Make a question to the Magic Shell">
+						<input type="" name="question" placeholder="Make a question to the Magic Shell">
 						<button class="Button">Ask</button>
 					</div>
-					<p class="answer wow fadeIn"><?= isset($answer) ? $answer : '' ?></p>
+					<p class="answer wow fadeIn"></p>
 				</div>
 			</form>
 		</div>
@@ -52,6 +31,7 @@
 	<script src="js/libs/jquery.min.js"></script>
 	<script src="js/libs/wow.min.js"></script>
 	<script src="js/audio.js"></script>
+	<script src="js/answer.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
