Puxando a corda parcial

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<div class="content">
 			<div class="concha">
-				<div class="pino">
+				<div class="pino" id="pino">
 					<img src="images/pino.png">	
 					<span class="linha"></span>
 				</div>
