--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<input type="" name="question" placeholder="Make a question to the Magic Shell">
 						<button class="Button">Ask</button>
 					</div>
-					<p class="answer wow fadeIn"></p>
+					<p class="answer_"></p>
 				</div>
 			</form>
 		</div>
